@@ -65,8 +65,16 @@ static GnomeUIInfo menu_main_edit[] = {
 		N_("Zero out todays timer by deleting todays time logs"),
 			       menu_clear_daily_counter,
 			       GNOME_STOCK_MENU_BLANK),
-	GNOMEUIINFO_SEPARATOR,
-#define MENU_EDIT_PROP_POS 6
+#define MENU_EDIT_JNL_POS 5
+	GNOMEUIINFO_ITEM_STOCK(N_("_Journal..."), 
+		N_("Show the timesheet journal for this project"),
+			       edit_journal,
+			       GNOME_STOCK_MENU_BLANK),
+	GNOMEUIINFO_ITEM_STOCK(N_("New _Task..."),
+		N_("Change the current task for this project"),
+			       change_task,
+			       GNOME_STOCK_MENU_BLANK),
+#define MENU_EDIT_PROP_POS 7
 	GNOMEUIINFO_MENU_PROPERTIES_ITEM(menu_properties,NULL),
 	GNOMEUIINFO_END
 };
@@ -145,22 +153,28 @@ static GnomeUIInfo menu_main[] = {
 
 
 static GnomeUIInfo menu_popup[] = {
-#define MENU_POPUP_CUT_POS 0
-	GNOMEUIINFO_MENU_CUT_ITEM(cut_project,NULL),
-#define MENU_POPUP_COPY_POS 1
-	GNOMEUIINFO_MENU_COPY_ITEM(copy_project,NULL),
-#define MENU_POPUP_PASTE_POS 2
-	GNOMEUIINFO_MENU_PASTE_ITEM(paste_project,NULL),
-	GNOMEUIINFO_SEPARATOR,
-#define MENU_POPUP_CDC_POS 4
-	GNOMEUIINFO_ITEM_STOCK(N_("Clear _Daily Counter"), NULL,
-			       menu_clear_daily_counter,
-			       GNOME_STOCK_MENU_BLANK),
-#define MENU_EDIT_JNL_POS 6
-	GNOMEUIINFO_ITEM_STOCK(N_("_Journal..."), NULL,
+#define MENU_POPUP_JNL_POS 0
+	GNOMEUIINFO_ITEM_STOCK(N_("_Journal..."), 
+		N_("Show the timesheet journal for this project"),
 			       edit_journal,
 			       GNOME_STOCK_MENU_BLANK),
+	GNOMEUIINFO_ITEM_STOCK(N_("New _Task..."),
+		N_("Change the current task for this project"),
+			       change_task,
+			       GNOME_STOCK_MENU_BLANK),
 	GNOMEUIINFO_SEPARATOR,
+#define MENU_POPUP_CUT_POS 3
+	GNOMEUIINFO_MENU_CUT_ITEM(cut_project,NULL),
+#define MENU_POPUP_COPY_POS 4
+	GNOMEUIINFO_MENU_COPY_ITEM(copy_project,NULL),
+#define MENU_POPUP_PASTE_POS 5
+	GNOMEUIINFO_MENU_PASTE_ITEM(paste_project,NULL),
+	GNOMEUIINFO_SEPARATOR,
+#define MENU_POPUP_CDC_POS 7
+	GNOMEUIINFO_ITEM_STOCK(N_("Clear _Daily Counter"),
+		N_("Zero out todays timer by deleting todays time logs"),
+			       menu_clear_daily_counter,
+			       GNOME_STOCK_MENU_BLANK),
 #define MENU_POPUP_PROP_POS 8
 	GNOMEUIINFO_MENU_PROPERTIES_ITEM(menu_properties,NULL),
 	GNOMEUIINFO_END
