@@ -1,3 +1,4 @@
+
 	* err-throw.c: add canonical error messages 
 
 	* main.c: modify order of intialization, in prep for 
@@ -6,8 +7,8 @@
 	* file-io.c: add support for alternate data sources 
 	  (e.g. sql work being done by Thomas Lang?s)
 
-	* file-io.c: add support for showing task memo in main 
-	  window
+	* ctree.c, menus.c: add support for showing & editing 
+	  the task memo from the main window
 
 Wed Sep 19 10:17:58 CDT 2001  Linas Vepstas <linas@linas.org>
 
